--- a/package.json
+++ b/package.json
@@ -11,36 +11,36 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": ">=12.1.1",
-    "@angular/common": ">=12.1.1",
-    "@angular/compiler": ">=12.1.1",
-    "@angular/core": ">=12.1.1",
-    "@angular/forms": ">=12.1.1",
-    "@angular/platform-browser": ">=12.1.1",
-    "@angular/platform-browser-dynamic": ">=12.1.1",
-    "@angular/router": ">=12.1.1",
-    "crypto-js": "^4.1.1",
+    "@angular/animations": "^12.2.17",
+    "@angular/common": "^12.2.17",
+    "@angular/compiler": "^12.2.17",
+    "@angular/core": "^12.2.17",
+    "@angular/forms": "^12.2.17",
+    "@angular/platform-browser": "^12.2.17",
+    "@angular/platform-browser-dynamic": "^12.2.17",
+    "@angular/router": "^12.2.17",
+    "crypto-js": "^4.2.0",
     "rxjs": "~6.6.7",
-    "tslib": "^2.0.0",
-    "zone.js": "~0.11.4"
+    "tslib": "^2.6.2",
+    "zone.js": "~0.11.8"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": ">=12.1.1",
-    "@angular/cli": ">=12.1.1",
-    "@angular/compiler-cli": ">=12.1.1",
-    "@angular/language-service": ">=12.1.1",
+    "@angular-devkit/build-angular": "^12.2.17",
+    "@angular/cli": "^12.2.17",
+    "@angular/compiler-cli": "^12.2.17",
+    "@angular/language-service": "^12.2.17",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
-    "jasmine-core": "~3.6.0",
+    "jasmine-core": "~3.8.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.3.4",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
-    "ng-packagr": "^12.1.1",
+    "ng-packagr": "^12.2.7",
     "protractor": "~7.0.0",
     "ts-node": "~7.0.0",
     "tslint": "~6.1.0",
