--- a/projects/ticketing/angular/package.json
+++ b/projects/ticketing/angular/package.json
@@ -5,7 +5,7 @@
     "tslib": "^2.0.0"
   },
   "peerDependencies": {
-    "@angular/common": ">=12.1.1",
-    "@angular/core": ">=12.1.1"
+    "@angular/common": "^12.2.17",
+    "@angular/core": "^12.2.17"
   }
 }
