--- a/projects/ticketing/angular/package.json
+++ b/projects/ticketing/angular/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@ticketing/angular",
-  "version": "1.3.0",
+  "version": "1.4.2",
   "dependencies": {
-    "tslib": "^2.0.0"
+    "tslib": "^2.6.2"
   },
   "peerDependencies": {
-    "@angular/common": "^12.2.17",
-    "@angular/core": "^12.2.17"
+    "@angular/common": "^17.3.7",
+    "@angular/core": "^17.3.7",
   }
 }
